Det er ALT attrirube er inne

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="parents">
-        <img src="https://th.bing.com/th/id/OIP.rK7RVEubo5RyCHM5ygIHzQHaEo?pid=ImgDet&rs=1" alt="">
+        <img src="https://th.bing.com/th/id/OIP.rK7RVEubo5RyCHM5ygIHzQHaEo?pid=ImgDet&rs=1" alt="forklaring">
     </div>
         <div class="child"><h2>Forest</h2></div>
 </body>
